--- a/style.css
+++ b/style.css
@@ -1,120 +1,252 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+	margin: 0;
+	padding: 0;
+	/* box-sizing: border-box; */
 }
 
-body{
-    background-color: #000000d0;
+body {
+	background-color: #000000d0;
+	font-family: 'Open Sans', sans-serif;
 }
 
-.hero{
-    position: fixed;
-    top: 0;
-    left: 0;
-    height: 100vh;
-    width: 100%;
-    opacity: 0.4;
-    background-image: url('https://cache.careers360.mobi/media/colleges/reviews/Jaypee%20Institute%20of%20Information%20Technology%2C%20Sector%20128%2C%20Noida%20(5).jpg');
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+.noselect {
+	-webkit-touch-callout: none; /* iOS Safari */
+	-webkit-user-select: none; /* Safari */
+	-khtml-user-select: none; /* Konqueror HTML */
+	-moz-user-select: none; /* Old versions of Firefox */
+	-ms-user-select: none; /* Internet Explorer/Edge */
+	user-select: none; /* Non-prefixed version, currently
+                                    supported by Chrome, Edge, Opera and Firefox */
 }
 
-.home{
-    top: 0;
-    height: 100vh;
-    width: 100%;
-    backdrop-filter: blur(12px);
+.hero {
+	position: fixed;
+	top: 0;
+	left: 0;
+	height: 100vh;
+	width: 100%;
+	opacity: 0.4;
+	background-image: url('https://cache.careers360.mobi/media/colleges/reviews/Jaypee%20Institute%20of%20Information%20Technology%2C%20Sector%20128%2C%20Noida%20(5).jpg');
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
 }
 
-.heading{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 20px 40px;
-    flex-direction: column;
-    font-family: 'Open Sans', sans-serif;
+.I {
+	height: 220px;
+	width: 220px;
 }
 
-.heading .jiitLogo{
-    width: 100px;
+.home {
+	top: 0;
+	height: 100vh;
+	width: 100%;
+	backdrop-filter: blur(10px);
 }
 
-.heading h1{
-    margin-top: 10px;
-    padding: 20px;
-    font-size: 56px;
-    color: #F5F9FF;
-    text-align: center;
+.heading {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	padding: 20px 40px;
+	flex-direction: column;
 }
 
-.searchContainer{
-    padding: 0 175px;
+.heading .jiitLogo {
+	width: 110px;
+	filter: drop-shadow(0 0 0.8rem rgb(252, 253, 253));
 }
 
-.searchBar{
-    margin-top: 30px;
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
+.heading h2 {
+	margin-top: 10px;
+	padding: 15px;
+	font-size: 56px;
+	color: rgb(255, 255, 255);
+	text-align: center;
 }
 
-.searchBar select{
-    font-size: 20px;
-    outline: none;
-    padding: 10px 20px;
-    border: 2px solid #4286f477;
-    border-radius: 4px;
-    -webkit-appearance: none;
-    text-align: center;
-    font-family: 'Open Sans', sans-serif;
+.routeFinder h4 {
+	margin-top: 10px;
+	padding: 15px;
+	font-size: 26px;
+	color: rgb(255, 255, 255);
+	text-align: center;
 }
 
-.searchBar .search-btn button{
-    padding: 14px 30px;
-    background: #4285F4;
-    border: none;
-    font-size: 16px;
-    color: white;
-    border-radius: 4px;
-    cursor: pointer;
+.routeFinder {
+	padding: 0 100px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
 
-.display{
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-    backdrop-filter: blur(15px);
-    width: 100%;
-    min-height: 100vh;
-    flex-direction: column;
+.searchBar {
+	margin-top: 30px;
+	display: flex;
+	align-items: center;
+	width: 100%;
+	justify-content: space-evenly;
 }
 
-.path{
-    text-align: center;
-    margin: 20px;
-    font-size: 48px;
-    color: #F5F9FF;
+.searchBar select {
+	font-size: 20px;
+	outline: none;
+	padding: 10px 20px;
+	color: rgb(255, 255, 255);
+	background: #050900;
+	border-radius: 4px;
+	-webkit-appearance: none;
+	text-align: center;
+	border: 2px solid white;
 }
 
-.pathElement{
-    font-size: 48px;
-    color: #F5F9FF;
-    display: inline-block;
-    margin: 20px 20px;
+.search-btn button {
+	padding: 14px 20px;
+	background: #050900;
+	border: 1 px solid white;
+	font-size: 20px;
+	color: rgb(255, 255, 255);
+	border-radius: 4px;
+	cursor: pointer;
+	border: 2px solid white;
 }
 
-.anotherButton button{
-    padding: 14px 30px;
-    background: #4285F4;
-    border: none;
-    font-size: 16px;
-    color: white;
-    border-radius: 4px;
-    cursor: pointer;
+.display {
+	display: flex;
+	align-items: center;
+	justify-content: space-evenly;
+	backdrop-filter: blur(8px);
+	width: 100%;
+	min-height: 100vh;
+	flex-direction: column;
 }
 
-.none{
-    display: none;
+.buttons {
+	margin-top: 40px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	min-height: 40vh;
+	justify-content: space-between;
+}
+
+.path, .displayClass {
+	text-align: center;
+	margin: 20px;
+	font-size: 48px;
+	color: #f5f9ff;
+}
+
+.pathElement {
+	font-size: 36px;
+	color: #f5f9ff;
+	display: inline-block;
+	margin: 20px 20px;
+}
+
+.anotherButton button {
+	padding: 14px 30px;
+	background: #050900;
+	font-size: 16px;
+	color: white;
+	border-radius: 6px;
+	cursor: pointer;
+	margin: 30px;
+	outline: none;
+	border: 2px solid white;
+}
+
+.groundFloor {
+	margin-top: 40px;
+}
+
+.choiceContainer {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	width: 100%;
+}
+
+.choice {
+	display: flex;
+	justify-content: space-evenly;
+	align-items: center;
+	width: 70%;
+}
+
+.choice .choiceBtn button {
+	padding: 10px 20px;
+	background: black;
+	outline: none;
+	border-radius: 4px;
+	border: 2px solid white;
+	color: white;
+
+	font-size: 18px;
+	cursor: pointer;
+}
+
+.cName{
+	position: relative;
+}
+
+.classFinder{
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	/* position: relative; */
+}
+
+.classFinder input{
+	margin: 20px;
+	padding: 10px 20px;
+	background: transparent;
+	outline: none;
+	border: none;
+	border-bottom: 2px solid white;
+	font-size: 18px;
+	color: white;
+}
+
+/* .classFinder button{
+	padding: 14px 30px;
+	background: #050900;
+	font-size: 16px;
+	color: white;
+	border-radius: 6px;
+	cursor: pointer;
+	outline: none;
+	border: 2px solid white;
+} */
+
+.displayClass{
+	margin: 30px;
+	font-size: 30px;
+}
+
+.displayClass .classElement{
+	color: white;
+	font-size: 30px;
+	margin: 10px 20px;
+}
+
+.list{
+	position: absolute;
+	width: 220px;
+	max-height: 300px;
+	background: white;
+	left: 560px;
+	outline: 1px solid black;
+	border: 1px solid black;
+	overflow-y: scroll;
+}
+
+.list li{
+	margin: 5px;
+	cursor: pointer;
+}
+
+.none {
+	display: none;
 }
